ocp4-prometheus-monitoring/grafana-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: grafana1
  namespace: kube-system
  labels:
    app: grafana
  annotations:
    openshift.io/host.generated: 'true'
spec:
  to:
    kind: Service
    name: grafana
    weight: 100
  port:
    targetPort: 3000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
